syntax = "proto3";

package proto.user.v1;

option go_package = "./user";

service UserService {
  rpc Index(UserRequest) returns (UserResponse) {}
}

message UserRequest {
  string FirstName = 1;
  string LastName = 2;
}

message UserResponse {
  string message = 1;
}
